<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Planet Sphere Live Wallpaper</string>
    <string name="bonk_name">Planet Sphere Live Wallpaper</string>
    <string name="bonk_desc">Planet Sphere</string>
    <string name="preferences_label">Planet Sphere Live Wallpaper</string>
    <string name="bonk_settings">Planet Sphere Live Wallpaper Settings</string>
    <string name="diamondpack">Planet settings</string>
    <string name="spherepack">Sphere settings</string>
    <string name="gallery">Live Wallpaper Gallery</string>
    <string name="ok">Ok</string>
    <string name="title_about_alert">Information</string>
    <string name="message_about">"Planet Sphere Live Wallpaper\nhttps://github.com/ELY3M/Planets-Sphere-Live-Wallpaper"</string>
    <string name="information">Information</string>
    <string name="share">Share on Facebook</string>
    <string name="sharesummary">Share this app with your friends on Facebook</string>
    <string name="about">Info</string>
    <string name="aboutsummary">Information about Planet Sphere Live Wallpaper</string>
    <string name="mobile">Mobile web</string>
    <string name="mobilesummary">Visit our website</string>
    <string name="twitter">Share on Twitter</string>
    <string name="twittersummary">Share this app with your friends on Twitter</string>
    <string name="send_titel">Planet Sphere Live Wallpaper</string>
    <string name="send">Hi, I found a cool Live Wallpaper. I think you might like it!</string>
    <string name="Default">Reset</string>
    <string name="ok_string">ok</string>
    <string name="set1">Planet style</string>
    <string name="set1summary">Choose different planet style</string>
    <string name="set2">Play Planet Quiz</string>
    <string name="set2summary">Play Planet Quiz to earn new features</string>
    <string name="set3">Play Planet Memory Game</string>
    <string name="set3summary">Play Planet Memory Game to earn new features</string>
    <string name="set4">Feature List</string>
    <string name="set4summary">Overview about all features you can unlock</string>
    <string name="set5">Rotation by touch</string>
    <string name="set5summary">Enable/Disable rotation by touch</string>
    <string name="set6">Background Theme</string>
    <string name="set6summary">Choose different Background</string>
    <string name="set7">Animation Speed</string>
    <string name="set7summary">Choose different animation speed</string>
    <string name="set8">Sparkle Numbers</string>
    <string name="set8summary">Choose different sparkle number</string>
    <string name="set9">Sparkle Symbol</string>
    <string name="set9summary">Choose different sparkle symbols</string>
    <string name="set10">Framerate</string>
    <string name="set10summary">Set a better framerate</string>
    <string name="set12">Second planet symbol</string>
    <string name="set12summary">Choose second planet symbol</string>
    <string name="rotset1">on</string>
    <string name="rotset2">off</string>
    <string name="premium1">Planet Sphere Premium Features</string>
    <string name="premium2">Thanks for downloading Planet Sphere Live Wallpaper. There are many more features for this wallpaper:</string>
    <string name="premium3">5 new background themes</string>
    <string name="premium4">5 new diamond styles</string>
    <string name="premium5">Change speed of diamonds</string>
    <string name="premium6">Change number of diamonds</string>
    <string name="premium7">5 new sparkle styles</string>
    <string name="premium8">5 new flying stars styles</string>
    <string name="premium9">Change number of sparkles</string>
    <string name="premium10">Change speed of stars</string>
    <string name="premium11">Change numbers of stars</string>
    <string name="premium12">No ads.</string>
    <string name="premium13">Get premium version</string>
    <string name="spherepacktitle">Sphere settings</string>
    <string name="informationtitle">Information</string>
    <string name="diamondpacktitle">Planet settings</string>
    <string name="next">NEXT QUESTION</string>
    <string name="iloveyou">Which planet is this?</string>
    <string name="highscoreanswer1">Yeah!! You were right in all question and you earned 5 points.</string>
    <string name="highscoreanswer2">Very Good! You earned 2 points.</string>
    <string name="highscoreanswer3">Good, but you can better. You earned 1 point.</string>
    <string name="highscoreanswer5">points!</string>
    <string name="highscoreanswer4">You reach</string>
    <string name="scoreButton">LOOK AT SCORES</string>
    <string name="backButton">TRY AGAIN</string>
    <string name="score">Your High Scores</string>
    <string name="antwort1">Venus</string>
    <string name="antwort2">Triton</string>
    <string name="antwort3">Sun</string>
    <string name="antwort4">Saturn</string>
    <string name="antwort5">Proteus</string>
    <string name="antwort6">Neptune</string>
    <string name="antwort7">Moon</string>
    <string name="antwort8">Miranda</string>
    <string name="antwort9">Mimas</string>
    <string name="antwort10">Mercury</string>
    <string name="antwort11">Mars</string>
    <string name="antwort12">Jupiter</string>
    <string name="antwort13">Janus</string>
    <string name="antwort14">Io</string>
    <string name="antwort15">Ganymed</string>
    <string name="antwort16">Europa</string>
    <string name="antwort17">Earth</string>
    <string name="antwort18">Ceres</string>
    <string name="antwort19">Callisto</string>
    <string name="antwort20">Atlas</string>
    <string name="antwort21">Ariel</string>
    <string name="opentext1">Planet Sphere is a live wallpaper which displays different symbols about universe, space and aliens. To get this on your home screen please go to live wallpaper gallery and choose Planet Sphere.</string>
    <string name="opentext2">There are many feature for this wallpaper. To unlock them you can earn points about different games. First you can play the Planet Quiz.</string>
    <string name="opentext3">To get an overview about all features go to the preference screen. If you see this symbol:</string>
    <string name="opentext4">It means that you have not already unlocked this feature.</string>
    <string name="opentext5">To get an overview about how much point you must earn go to feature list. Your actual score is:</string>
    <string name="opentext6" />
</resources>
