<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/background1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/ScrollView01" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/title" />
            <TextView android:textSize="15.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/opentext1" />
            <ImageButton android:id="@id/lwpgallery" android:background="@null" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/livewallpapergallery" android:layout_weight="1.0" />
            <TextView android:textSize="15.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/opentext2" />
            <ImageButton android:id="@id/getquiz" android:background="@null" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/gotoplanetquiz" android:layout_weight="1.0" />
            <TextView android:textSize="15.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/opentext3" />
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/leericon" />
            <TextView android:textSize="15.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/opentext4" />
            <TextView android:textSize="15.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/opentext5" />
            <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="#ffaffb95" android:layout_gravity="center" android:id="@id/openscore" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/opentext6" />
            <ImageButton android:id="@id/gotolist" android:background="@null" android:paddingTop="5.0dip" android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:src="@drawable/gotofeaturelist" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>